--- a/first_year_tcr_exercise 3.1/html-css.html
+++ b/first_year_tcr_exercise 3.1/html-css.html
@@ -24,9 +24,10 @@
         </ul>
     </nav>
     <h1>HTML/CSS</h1>
+    <section>
     <img src="./img/html.png" alt="">
     <h2>Wat is HTML/CSS ?</h2>
-    <section>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in velit placerat magna pulvinar porta sit
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in velit placerat magna pulvinar porta sit
         amet vel purus. Suspendisse potenti. Maecenas eu purus pharetra, efficitur lorem eget, facilisis risus. Proin
         pretium orci bibendum blandit tempor. Fusce lacinia nisi quis iaculis cursus. Donec vehicula nisi eget orci
         pharetra, semper scelerisque nulla varius. Etiam ut eros in libero condimentum aliquet non quis leo.
