--- a/first_year_tcr_exercise 3.1/javascript.html
+++ b/first_year_tcr_exercise 3.1/javascript.html
@@ -27,14 +27,19 @@
     <h2>Javascript</h2>
     <h3>Wat is javascript?</h3>
     <img src="./img/javascript.png" alt="javascript logo">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in velit placerat magna pulvinar porta sit amet
-        vel purus. Suspendisse potenti. Maecenas eu purus pharetra, efficitur lorem eget, facilisis risus.
 
-        Proin pretium orci bibendum blandit tempor. Fusce lacinia nisi quis iaculis cursus. Donec vehicula nisi eget
-        orci pharetra, semper scelerisque nulla varius. Etiam ut eros in libero condimentum aliquet non quis leo.
-        Pellentesque sit amet fermentum sem, in dictum leo. </p>
-    <footer>Copyright Techniek College Rotterdam</footer>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in velit placerat magna pulvinar porta sit
+            amet
+            vel purus. Suspendisse potenti. Maecenas eu purus pharetra, efficitur lorem eget, facilisis risus.
 
+            Proin pretium orci bibendum blandit tempor. Fusce lacinia nisi quis iaculis cursus. Donec vehicula nisi eget
+            orci pharetra, semper scelerisque nulla varius. Etiam ut eros in libero condimentum aliquet non quis leo.
+            Pellentesque sit amet fermentum sem, in dictum leo. </p>
+    </section>
+
+    <footer>techniekcollegerotterdam</footer>
+    
 </body>
 
 </html>
