--- a/first_year_tcr_exercise 3.1/mysql.html
+++ b/first_year_tcr_exercise 3.1/mysql.html
@@ -25,13 +25,17 @@
     </nav>
     <h1>MY SQL</h1>
     <h2>Wat is SQL?</h2>
+    <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in velit placerat magna pulvinar porta sit amet
         vel purus. Suspendisse potenti. Maecenas eu purus pharetra, efficitur lorem eget, facilisis risus.
 
         Proin pretium orci bibendum blandit tempor. Fusce lacinia nisi quis iaculis cursus. Donec vehicula nisi eget
         orci pharetra, semper scelerisque nulla varius. Etiam ut eros in libero condimentum aliquet non quis leo.
         Pellentesque sit amet fermentum sem, in dictum leo. </p>
+    </section>
     <img src="./img/mysql.png" alt="mysql logo">
+
+    <footer>techniekcollegerotterdam</footer>
 </body>
 
 </html>
