--- a/opdracht 4.1/index.html
+++ b/opdracht 4.1/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opdracht 4.1 - Font & Color</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                 <h3>Release & Platform</h3>
                 <p>Datum: 2 september 2022 <br>
                     Platform: PS5</p>
-                <p>
+                <p class="paragraaf">
                     The Last of Us wordt mede door de uitmuntende storytelling en gameplay als een van de beste games
                     ooit
                     gemaakt gezien. In de remake belooft Naugthy Dog meer dan alleen een audiovisueel likje verf. Zo
