--- a/opdracht 4.1/index.html
+++ b/opdracht 4.1/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<div class="header">
+    <h1>Header</h1>
+    <p></p>
+
+  </div>
+
 <body>
     <main>
         <header>
