--- a/opdracht 5.2/html.html
+++ b/opdracht 5.2/html.html
@@ -21,12 +21,19 @@
             <li><a href="mySQL.html">SQL</a></li>
         </ul>
     </nav>
-    <header class="first">
-<h1 class="second">
-FIRST YEAR TCR PROGRAMMING LANGUAGES 
-</h1>
-    </header>
-    <footer>Copyright Techniek College Rotterdam</footer>
-</body>
+   <header>
+    <h1>
+        HTML
+    </h1>
+   </header>
+   <h2>Wat is HTML</h2>
+   <section><p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+     Rerum laudantium tempore officia praesentium similique repudiandae qui voluptates? 
+     Officiis tempora fugiat earum. Aperiam, id. Mollitia corrupti facilis voluptas alias porro provident!
+   </p></section>
+   <img src="./img/html.png" alt="De versie van HTML en CSS die we nu gebruiken">
+   <footer>Copyright Techniek College Rotterdam</footer>
+   </body>
 
-</html>
+   </html>
