--- a/opdracht 5.2/javascript.html
+++ b/opdracht 5.2/javascript.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>opdracht 3.1</title>
 </head>
-<body>
+<body class="gokublack1">
     <nav>
         <img src="./img/hacker.png" alt="logo">
         <ul>
@@ -21,11 +21,16 @@
             <li><a href="mySQL.html">SQL</a></li>
         </ul>
     </nav>
-    <header class="first">
-<h1 class="second">
-FIRST YEAR TCR PROGRAMMING LANGUAGES 
+    <header>
+<h1>
+    javascript
 </h1>
     </header>
+    <h2>Wat is javascript</h2>
+    <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Minus nesciunt voluptates dolores ipsum doloribus repellat vel architecto quisquam quidem. Assumenda fugiat aperiam, 
+        quaerat accusamus nihil reiciendis. Molestiae nostrum odio iure.</p></section>
+        <img src="./img/javascript.png" alt="Logo van Javascript">
     <footer>Copyright Techniek College Rotterdam</footer>
 </body>
 
