--- a/opdracht 5.2/PHP.html
+++ b/opdracht 5.2/PHP.html
@@ -21,11 +21,16 @@
             <li><a href="mySQL.html">SQL</a></li>
         </ul>
     </nav>
-    <header class="first">
-<h1 class="second">
-FIRST YEAR TCR PROGRAMMING LANGUAGES 
+    <header>
+<h1>
+PHP
 </h1>
     </header>
+    <h2>Wat is PHP?</h2>
+    <section><p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum consequuntur dolore minima quo magni quasi eius! Modi facere, accusantium molestiae consequuntur architecto nisi officia assumenda, laudantium exercitationem velit possimus quaerat.
+    </p></section>
+    <img src="./img/php.png" alt="Logo van PHP">
     <footer>Copyright Techniek College Rotterdam</footer>
 </body>
 
