--- a/opdracht 5.2/mySQL.html
+++ b/opdracht 5.2/mySQL.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>opdracht 3.1</title>
 </head>
-<body>
+<body class="gokublack1">
     <nav>
         <img src="./img/hacker.png" alt="logo">
         <ul>
@@ -21,11 +21,16 @@
             <li><a href="mySQL.html">SQL</a></li>
         </ul>
     </nav>
-    <header class="first">
-<h1 class="second">
-FIRST YEAR TCR PROGRAMMING LANGUAGES 
+    <header>
+<h1>
+SQL
 </h1>
     </header>
+    <h2>Wat is SQL</h2>
+    <section><p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit neque modi corrupti dicta dolorem hic aliquid, exercitationem quidem aliquam esse, maxime cupiditate dolores dolorum nobis molestias non laudantium illum quos!
+    </p></section>
+    <img src="./img/mysql.png" alt="Logo van mySQL">
     <footer>Copyright Techniek College Rotterdam</footer>
 </body>
 
