--- a/opdracht 6.4/PHP.html
+++ b/opdracht 6.4/PHP.html
@@ -19,21 +19,18 @@
             <li><a href="javascript.html">javascript</a></li>
             <li><a href="php.html">PHP</a></li>
             <li><a href="mySQL.html">SQL</a></li>
-            <ul class="dropdown">
-                <li class="dropbtn">
-             JAAR 2
-                </li>
-                <div class="dropdown-content"><a href="">oop</a>
-                <a href="">laravel</a>
-            <a href="">testen</a></div> 
-            </ul>
         </ul>
     </nav>
-    <header class="first">
-<h1 class="second">
-FIRST YEAR TCR PROGRAMMING LANGUAGES 
+    <header>
+<h1>
+PHP
 </h1>
     </header>
+    <h2>Wat is PHP?</h2>
+    <section><p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum consequuntur dolore minima quo magni quasi eius! Modi facere, accusantium molestiae consequuntur architecto nisi officia assumenda, laudantium exercitationem velit possimus quaerat.
+    </p></section>
+    <img src="./img/php.png" alt="Logo van PHP">
     <footer>Copyright Techniek College Rotterdam</footer>
 </body>
 
