--- a/opdracht 6.4/html.html
+++ b/opdracht 6.4/html.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <title>opdracht 3.1</title>
 </head>
+
 <body>
     <nav>
         <img src="./img/hacker.png" alt="logo">
@@ -19,21 +21,24 @@
             <li><a href="javascript.html">javascript</a></li>
             <li><a href="php.html">PHP</a></li>
             <li><a href="mySQL.html">SQL</a></li>
-            <ul class="dropdown">
-                <li class="dropbtn">
-             JAAR 2
-                </li>
-                <div class="dropdown-content"><a href="">oop</a>
-                <a href="">laravel</a>
-            <a href="">testen</a></div> 
+            
             </ul>
         </ul>
     </nav>
-    <header class="first">
-<h1 class="second">
-FIRST YEAR TCR PROGRAMMING LANGUAGES 
-</h1>
+    <header>
+        <h1>
+            HTML
+        </h1>
     </header>
+    <h2>Wat is HTML</h2>
+    <section>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Rerum laudantium tempore officia praesentium similique repudiandae qui voluptates?
+            Officiis tempora fugiat earum. Aperiam, id. Mollitia corrupti facilis voluptas alias porro provident!
+        </p>
+    </section>
+    <img src="./img/html.png" alt="De versie van HTML en CSS die we nu gebruiken">
     <footer>Copyright Techniek College Rotterdam</footer>
 </body>
 
